I think it fixed

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -361,7 +361,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
-windowrule = float, class:^(jome)$
+windowrulev2 = float, class:^(jome)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -408,8 +408,8 @@ windowrulev2 = scrolltouchpad 1, class:^(kitty)$
 
 # blur to wlogout
 layerrule = blur, wlogout
-layerrule = blur, ~/.config/wlogout/logoutlaunch.sh
-layerrule = blur,logout_dialog
+# layerrule = blur, ~/.config/wlogout/logoutlaunch.sh
+layerrule = blur, logout_dialog
 
 decoration {
   blur {
@@ -423,6 +423,6 @@ decoration {
 }
 
 # layerrule = blur,waybar
-layerrule = ignorezero,tofi
-layerrule = ignorezero, dunst
-layerrule = blur,dunst
+layerrule = ignorealpha 0.5, tofi
+layerrule = ignorealpha 0.5, dunst
+layerrule = blur, dunst
