--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -143,14 +143,12 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled        = true
-        size           = 6       # how strong the blur is
-        passes         = 3       # how many times to apply it
+        enabled = true
+        size = 3
+        passes = 3
         new_optimizations = true
-        vibrancy       = 0.1696
-        ignore_opacity = true    # blur even fully transparent pixels
-        popups         = true    # apply to popups
-        popups_ignorealpha = 0.6 # how transparent a popup must be to still blur
+        vibrancy = 0.1696
+        ignore_opacity = true
     }
 }
 
@@ -363,7 +361,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
-windowrulev2 = float, class:^(jome)$
+windowrule = float, class:^(jome)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -409,12 +407,22 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = scrolltouchpad 1, class:^(kitty)$
 
 # blur to wlogout
-layerrule = blur on, wlogout
-# layerrule = blur, ~/.config/wlogout/logoutlaunch.sh
-layerrule = blur on, logout_dialog
+layerrule = blur, wlogout
+layerrule = blur, ~/.config/wlogout/logoutlaunch.sh
+layerrule = blur,logout_dialog
 
+decoration {
+  blur {
+    enabled        = true
+    size           = 6       # how strong the blur is
+    passes         = 3       # how many times to apply it
+    ignore_opacity = true    # blur even fully transparent pixels
+    popups         = true    # apply to popups
+    popups_ignorealpha = 0.6 # how transparent a popup must be to still blur
+  }
+}
 
-# layerrule = blur, waybar
-layerrule = ignorealpha 0.5, tofi
-layerrule = ignorealpha 0.5, dunst
-layerrule = blur on, dunst
+# layerrule = blur,waybar
+layerrule = ignorezero,tofi
+layerrule = ignorezero, dunst
+layerrule = blur,dunst
