--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -361,7 +361,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
-windowrule = float, class:^(jome)$
+windowrule =  opacity 0.90 0.90, class:^(jome)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -407,9 +407,9 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = scrolltouchpad 1, class:^(kitty)$
 
 # blur to wlogout
-layerrule = blur, wlogout
-layerrule = blur, ~/.config/wlogout/logoutlaunch.sh
-layerrule = blur,logout_dialog
+layerrule = opacity 0.80 0.80, wlogout
+layerrule = opacity 0.80 0.80, ~/.config/wlogout/logoutlaunch.sh
+layerrule = opacity 0.80 0.80,logout_dialog
 
 decoration {
   blur {
@@ -423,6 +423,6 @@ decoration {
 }
 
 # layerrule = blur,waybar
-layerrule = ignorezero,tofi
-layerrule = ignorezero, dunst
-layerrule = blur,dunst
+layerrule = opacity 0.80 0.80,tofi
+layerrule = opacity 0.80 0.80,dunst
+layerrule = opacity 0.80 0.80,dunst
