--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -363,7 +363,7 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
-windowrulev2 = float, class:^(jome)$
+windowrulev2 = float,class:^(jome)$
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
@@ -409,10 +409,11 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = scrolltouchpad 1, class:^(kitty)$
 
 # blur to wlogout
-layerrule = blur, wlogout
-layerrule = blur, logout_dialog
+blurls = wlogout
+blurls = logout_dialog
 
-# layerrule = blur, waybar
-layerrule = ignorezero,tofi
-layerrule = ignorezero, dunst
-layerrule = blur,dunst
+# blur to others
+blurls = tofi
+blurls = dunst
+# layerrule = ignorezero, tofi
+# layerrule = ignorezero, dunst
