--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -339,8 +339,8 @@ bind = SUPER, Print, exec, grimblast --notify copysave active # current Active w
 bind = SUPER ALT, Print, exec, grimblast --notify copysave area # Select area to take screenshot
 
 # Volume and Media Control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5 
+binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
+binde = , XF86AudioLowerVolume, exec, pamixer -d 5 
 bind = , XF86AudioMicMute, exec, pamixer --default-source -m
 bind = , XF86AudioMute, exec, pamixer -t
 bind = , XF86AudioPlay, exec, playerctl play-pause
