--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -138,19 +138,34 @@ decoration {
     rounding = 10
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.92
+    inactive_opacity = 0.85
+    fullscreen_opacity = 1.0
+
+    # Drop shadow for depth
+    shadow {
+        enabled = true
+        range = 20
+        render_power = 3
+        color = rgba(1a1a2eaa)
+    }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 6
-        passes = 3
+        size = 8
+        passes = 4
         new_optimizations = true
-        vibrancy = 0.1696
+        vibrancy = 0.2
+        vibrancy_darkness = 0.5
+        noise = 0.02
+        contrast = 0.9
+        brightness = 0.8
+        xray = false
         ignore_opacity = true
         popups = true
         popups_ignorealpha = 0.6
+        special = true
     }
 }
 
@@ -365,32 +380,17 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 # windowrule = float, ^(kitty)$
 windowrulev2 = float,class:^(jome)$
 
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-windowrulev2 = opacity 0.90 0.90,class:^(Thorium-browser)$
-windowrulev2 = opacity 0.80 0.80,class:^(Code)$
-windowrulev2 = opacity 0.80 0.80,class:^(Arduino IDE)$
-windowrulev2 = opacity 0.80 0.80,class:^(dev.warp.Warp)$
-windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
-windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
-windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
-windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.gnome.Nautilus)$
-windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
-windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
-windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(qt6ct)$
-windowrulev2 = opacity 0.80 0.80,class:^(kvantummanager)$
-windowrulev2 = opacity 0.80 0.70,class:^(pavucontrol)$
-windowrulev2 = opacity 0.80 0.70,class:^(blueman-manager)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-applet)$
-windowrulev2 = opacity 0.70 0.70,class:^(Spotify)$
-windowrulev2 = opacity 0.70 0.70,initialTitle:^(Spotify Free)$
-windowrulev2 = opacity 0.80 0.70,class:^(nm-connection-editor)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrulev2 = opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
+# Additional app-specific rules (unique apps not in main opacity section)
+windowrulev2 = opacity 0.90 0.85, class:^(Thorium-browser)$
+windowrulev2 = opacity 0.88 0.80, class:^(Arduino IDE)$
+windowrulev2 = opacity 0.85 0.75, class:^(dev.warp.Warp)$
+windowrulev2 = opacity 0.88 0.80, class:^(code-insiders-url-handler)$
+windowrulev2 = opacity 0.88 0.80, class:^(org.kde.ark)$
+windowrulev2 = opacity 0.85 0.75, class:^(nm-applet)$
+windowrulev2 = opacity 0.85 0.75, class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = opacity 0.85 0.75, class:^(polkit-gnome-authentication-agent-1)$
+windowrulev2 = opacity 0.85 0.75, class:^(org.freedesktop.impl.portal.desktop.gtk)$
+windowrulev2 = opacity 0.85 0.75, class:^(org.freedesktop.impl.portal.desktop.hyprland)$
 
 windowrulev2 = float,class:^(kvantummanager)$
 windowrulev2 = float,class:^(qt5ct)$
@@ -415,5 +415,64 @@ blurls = logout_dialog
 # blur to others
 blurls = tofi
 blurls = dunst
-# layerrule = ignorezero, tofi
-# layerrule = ignorezero, dunst
+blurls = waybar
+blurls = gtk-layer-shell
+blurls = notifications
+
+# Layer rules for transparency handling
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = blur, notifications
+layerrule = ignorezero, notifications
+
+#######################################
+### WINDOW OPACITY & BLUR RULES     ###
+#######################################
+
+# Terminal - more transparent for aesthetic
+windowrulev2 = opacity 0.85 0.75, class:^(kitty)$
+windowrulev2 = opacity 0.85 0.75, class:^(Alacritty)$
+windowrulev2 = opacity 0.85 0.75, class:^(foot)$
+windowrulev2 = opacity 0.85 0.75, class:^(wezterm)$
+
+# Code editors
+windowrulev2 = opacity 0.90 0.85, class:^(Code)$
+windowrulev2 = opacity 0.90 0.85, class:^(code-url-handler)$
+windowrulev2 = opacity 0.90 0.85, class:^(cursor)$
+windowrulev2 = opacity 0.90 0.85, class:^(Cursor)$
+windowrulev2 = opacity 0.90 0.85, class:^(neovide)$
+
+# File managers
+windowrulev2 = opacity 0.88 0.80, class:^(org.gnome.Nautilus)$
+windowrulev2 = opacity 0.88 0.80, class:^(thunar)$
+windowrulev2 = opacity 0.88 0.80, class:^(pcmanfm)$
+windowrulev2 = opacity 0.88 0.80, class:^(dolphin)$
+
+# Browsers - keep more opaque for readability
+windowrulev2 = opacity 0.95 0.90, class:^(brave-browser)$
+windowrulev2 = opacity 0.95 0.90, class:^(Brave-browser)$
+windowrulev2 = opacity 0.95 0.90, class:^(firefox)$
+windowrulev2 = opacity 0.95 0.90, class:^(chromium)$
+
+# Discord, Spotify, and media apps
+windowrulev2 = opacity 0.88 0.80, class:^(discord)$
+windowrulev2 = opacity 0.88 0.80, class:^(vesktop)$
+windowrulev2 = opacity 0.85 0.75, class:^(Spotify)$
+windowrulev2 = opacity 0.85 0.75, initialTitle:^(Spotify)$
+
+# System utilities
+windowrulev2 = opacity 0.85 0.75, class:^(pavucontrol)$
+windowrulev2 = opacity 0.85 0.75, class:^(blueman-manager)$
+windowrulev2 = opacity 0.85 0.75, class:^(nm-connection-editor)$
+windowrulev2 = opacity 0.85 0.75, class:^(gnome-system-monitor)$
+windowrulev2 = opacity 0.85 0.75, class:^(btop)$
+
+# Settings apps
+windowrulev2 = opacity 0.88 0.80, class:^(gnome-control-center)$
+windowrulev2 = opacity 0.88 0.80, class:^(nwg-look)$
+windowrulev2 = opacity 0.88 0.80, class:^(qt5ct)$
+windowrulev2 = opacity 0.88 0.80, class:^(qt6ct)$
+windowrulev2 = opacity 0.88 0.80, class:^(kvantummanager)$
+
+# Obsidian notes
+windowrulev2 = opacity 0.90 0.85, class:^(obsidian)$
