--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -263,20 +263,19 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, O, exec, $notes
 bind = $mainMod, C, exec, $editor
-bind = $mainMod, S, exec, $editor-alt
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, L, exit,
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, A, exec, $menu
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
-bind = SUPER, E, exec, jome -d | wl-copy #Emojipicker + clipboard copy
+bind = SUPER, F, exec, jome -d | wl-copy #Emojipicker + clipboard copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -352,9 +351,9 @@ bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper_switcher.sh
 # Screenshot 
 # add --cursor flag to include cursor also, --freeze flag to freeze before selection
 # If SUPER + Print key doesn't work, try with SUPER + Fn + Print key
-bind = , Print, exec, grimblast --notify copysave screen # Entire screen + clipboard copy
-bind = SUPER, Print, exec, grimblast --notify copysave active # current Active window only + clipboard copy
-bind = SUPER ALT, Print, exec, grimblast --notify copysave area # Select area to take screenshot
+bind = , S, exec, grimblast --notify copysave screen # Entire screen + clipboard copy
+bind = SUPER, S, exec, grimblast --notify copysave active # current Active window only + clipboard copy
+bind = SUPER ALT, S, exec, grimblast --notify copysave area # Select area to take screenshot
 
 # Volume and Media Control
 binde = , XF86AudioRaiseVolume, exec, pamixer -i 5 
